<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Searcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="queryhint">Edit Search Term</string>
    <string name="title_activity_image_display">Image Display</string>
    <string name="title_activity_settings">Advanced Search Options</string>
    <string name="ChooseImageSize">Choose Image Size</string>
    <string name="searchOptionsLabel">Advanced Search Options</string>
    <string name="img_size_label">Image Size</string>
    <string name="img_type_label">Image Type</string>
    <string name="img_color_label">Color Filter</string>
    <string name="img_sitefilter_label">Site Filter</string>
    <string name="save_button_label">Save</string>
    <string name="cancel_button_label">Cancel</string>

    <string-array name="image_size">
        <item>any</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
    <string-array name="color_filter">
        <item>any</item>
        <item>color</item>
        <item>gray</item>
        <item>gray</item>
        <item>blue</item>
        <item>gray</item>
        <item>black</item>
        <item>brown</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string-array name="image_type">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

    <string name="site_hint">Enter Site Here</string>

</resources>