<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/imgSizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/img_size_label" />

        <Spinner
            android:id="@+id/imgSizeSpinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/image_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/imgColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/img_color_label" />

        <Spinner
            android:id="@+id/imgColorSpinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/color_filter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/imgTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/img_type_label" />

        <Spinner
            android:id="@+id/imagetype"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/image_type" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/imgSiteFilterLabel"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:text="@string/img_sitefilter_label" />

        <EditText
            android:id="@+id/etSiteFilter"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/site_hint" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp" >

        <Button
            android:id="@+id/defaultButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="cancelSettings"
            android:text="@string/cancel_button_label" />

        <Button
            android:id="@+id/saveButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/defaultButton"
            android:onClick="backToSearch"
            android:text="@string/save_button_label" />
    </RelativeLayout>

</LinearLayout>